<resources>
    <string name="app_name">AC Video Poker</string>

    <string name="suit_spade">SPADE</string>
    <string name="suit_club">CLUB</string>
    <string name="suit_heart">HEART</string>
    <string name="suit_diamond">DIAMOND</string>

    <string name="value_two">TWO</string>
    <string name="value_three">THREE</string>
    <string name="value_four">FOUR</string>
    <string name="value_five">FIVE</string>
    <string name="value_six">SIX</string>
    <string name="value_seven">SEVEN</string>
    <string name="value_eight">EIGHT</string>
    <string name="value_nine">NINE</string>
    <string name="value_ten">TEN</string>
    <string name="value_jack">JACK</string>
    <string name="value_queen">QUEEN</string>
    <string name="value_king">KING</string>
    <string name="value_ace">ACE</string>

    <string name="result_royal_flush">ROYAL FLUSH</string>
    <string name="result_straight_flush">STRAIGHT FLUSH</string>
    <string name="result_four_of_a_kind">4 OF A KIND</string>
    <string name="result_full_house">FULL HOUSE</string>
    <string name="result_flush">FLUSH</string>
    <string name="result_straight">STRAIGHT</string>
    <string name="result_three_of_a_kind">3 OF A KIND</string>
    <string name="result_two_pair">TWO PAIR</string>
    <string name="result_jacks_or_better">JACKS OR BETTER</string>
    <string name="result_nothing">NOTHING</string>
    <string name="result_double_up_win">WIN</string>
    <string name="result_double_up_lose">LOSE</string>
    <string name="result_select_a_card">SELECT A CARD</string>

    <string name="button_deal">DEAL</string>
    <string name="button_draw">DRAW</string>
    <string name="button_double_up">DOUBLE UP</string>
    <string name="button_speed">SPEED</string>
    <string name="button_sound">SOUND</string>
    <string name="button_game_menu">GAME MENU</string>
    <string name="button_hold">HELD</string>
    <string name="dealer">DEALER</string>
    <string name="player">PLAYER</string>
    <string name="bet">BET</string>
    <string name="game_over">GAME OVER</string>
    <string name="play_5_credits">PLAY 5 CREDITS</string>
    <string name="win">WIN $</string>
    <string name="credit">CREDIT $</string>

    <string name="button_menu_payouts">PAYOUTS</string>
    <string name="button_menu_statistics">STATISTICS</string>
    <string name="button_menu_bank">BANK</string>
    <string name="button_menu_card_designs">CARDS</string>
    <string name="button_menu_contact">CONTACT</string>
    <string name="button_menu_return_to_game">RETURN TO GAME</string>

    <string name="button_menu_insert">INSERT \$%d\.00</string>
    <string name="current_bank_amount">CURRENT CREDIT AMOUNT IN MACHINE:</string>
    <string name="button_return_to_menu">RETURN TO GAME MENU</string>
    <string name="button_reset_statistics">RESET YOUR STATISTICS</string>

    <string name="statistics_hands_played">HANDS PLAYED</string>
    <string name="statistics_dealt_drawn">RESULTS (DEALT/DRAWN)</string>
    <string name="statistics_double_up_plays">DOUBLE UP PLAYS</string>
    <string name="statistics_double_up_wins">DOUBLE UP WINS</string>
    <string name="statistics_money_wagered">MONEY WAGERED</string>
    <string name="statistics_money_won">MONEY WON</string>
    <string name="statistics_reset_confirm">THIS ACTION WILL RESET THE MACHINE &amp; YOUR STATISTICS AND START YOU AT $200.00 IN YOUR BANK. ARE YOU SURE YOU WANT TO RESET?</string>

    <string name="about_contact">HAVE A SUGGESTION, ISSUE, OR KIND WORDS TO SHARE ABOUT THE APP?\nCONTACT ME BY USING THE BUTTON BELOW.\nIT WILL OPEN A NEW EMAIL ADDRESSED TO ME USING YOUR DEFAULT EMAIL APP.</string>
    <string name="button_contact">SEND FEEDBACK EMAIL</string>
    <string name="error_activity_not_found">ERROR: COULD NOT FIND EMAIL APP</string>

    <string name="card_design_classic">CLASSIC</string>
    <string name="card_design_large">LARGE</string>
</resources>
