<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="fragment"
            type="com.dommyg.acvideopoker.fragments.MenuFragment" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <Button
            android:id="@+id/button_menu_payouts"
            style="@style/GameButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_menu_payouts"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintBottom_toTopOf="@id/button_menu_bank"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/button_menu_statistics"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            android:onClick="@{() -> fragment.navigateToPayouts()}"/>

        <Button
            android:id="@+id/button_menu_statistics"
            style="@style/GameButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_menu_statistics"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="16dp"
            android:enabled="false"
            app:layout_constraintBottom_toTopOf="@id/button_menu_card_designs"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button_menu_payouts"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"/>

        <Button
            android:id="@+id/button_menu_bank"
            style="@style/GameButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_menu_bank"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/button_menu_card_designs"
            app:layout_constraintTop_toTopOf="parent"
            android:onClick="@{() -> fragment.navigateToBank()}"/>

        <Button
            android:id="@+id/button_menu_card_designs"
            style="@style/GameButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_menu_card_designs"
            android:layout_marginStart="8dp"
            android:enabled="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button_menu_bank"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_menu_return_to_game"
            style="@style/GameButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_menu_return_to_game"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_menu_bank"
            app:layout_constraintVertical_bias="0.0"
            android:onClick="@{() -> fragment.navigateBack()}"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>