<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="fragment"
            type="com.dommyg.acvideopoker.fragments.MenuContactFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            style="@style/RegularText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/about_contact"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/button_menu_return_to_menu"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/button_menu_return_to_menu"
            style="@style/GameButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_return_to_menu"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/button_menu_send_email"
            app:layout_constraintBottom_toBottomOf="parent"
            android:onClick="@{() -> fragment.navigateBack()}"/>

        <Button
            android:id="@+id/button_menu_send_email"
            style="@style/GameButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_contact"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@id/button_menu_return_to_menu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:onClick="@{() -> fragment.openEmail()}"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>