<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="16dp"
    android:paddingTop="16dp"
    android:paddingEnd="16dp"
    android:paddingBottom="8dp">

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="FULL HOUSE" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="@+id/linearLayout2">

        <TextView
            android:id="@+id/textViewHold1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_hold"
            android:textAlignment="center"
            android:visibility="invisible"
            tools:text="HOLD" />

        <TextView
            android:id="@+id/textViewHold2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_hold"
            android:textAlignment="center"
            android:visibility="invisible"
            tools:text="HOLD" />

        <TextView
            android:id="@+id/textViewHold3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_hold"
            android:textAlignment="center"
            android:visibility="invisible"
            tools:text="HOLD" />

        <TextView
            android:id="@+id/textViewHold4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_hold"
            android:textAlignment="center"
            android:visibility="invisible"
            tools:text="HOLD" />

        <TextView
            android:id="@+id/textViewHold5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_hold"
            android:textAlignment="center"
            android:visibility="invisible"
            tools:text="HOLD" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/textViewWin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewResult">

        <ImageView
            android:id="@+id/imageViewCard1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            tools:srcCompat="@drawable/back" />

        <ImageView
            android:id="@+id/imageViewCard2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            tools:srcCompat="@drawable/back" />

        <ImageView
            android:id="@+id/imageViewCard3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            tools:srcCompat="@drawable/back" />

        <ImageView
            android:id="@+id/imageViewCard4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            tools:srcCompat="@drawable/back" />

        <ImageView
            android:id="@+id/imageViewCard5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            tools:srcCompat="@drawable/back" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewWin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        tools:text="WIN $100.00" />

    <TextView
        android:id="@+id/textViewCredit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        tools:text="CREDIT $.00" />

    <TextView
        android:id="@+id/textViewBet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bet"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        tools:text="BET 5" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/textViewGameType"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/buttonMenu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/button_game_menu"
            tools:text="Game Menu" />

        <Button
            android:id="@+id/buttonSound"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/button_sound"
            tools:text="Sound (2)" />

        <Button
            android:id="@+id/buttonSpeed"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/button_speed"
            tools:text="Speed (1)" />

        <ImageView
            android:id="@+id/imageViewDenom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            tools:srcCompat="@android:drawable/btn_dialog" />

        <Button
            android:id="@+id/buttonDoubleUp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/button_double_up"
            tools:text="Double Up" />

        <Button
            android:id="@+id/buttonBet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:text="@string/bet" />

        <Button
            android:id="@+id/buttonDeal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/button_deal"
            tools:text="Deal" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewGameType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_jacks_or_better"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        tools:text="JACKS OR BETTER" />

    <TextView
        android:id="@+id/textViewGameOver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_over"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        tools:text="GAME OVER" />

</androidx.constraintlayout.widget.ConstraintLayout>