<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="fragment"
            type="com.dommyg.acvideopoker.fragments.MenuCardsFragment" />
        <variable
            name="viewModel"
            type="com.dommyg.acvideopoker.viewmodels.GameViewModel" />
        <import type="com.dommyg.acvideopoker.utils.Constants"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/mid_guideline_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/mid_guideline_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.42"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/option_1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:padding="8dp"
            android:background="@{viewModel.jacksOrBetter.currentCardDesign == Constants.CARD_DESIGN_CLASSIC_INDEX ? @drawable/payout_background_selected : @drawable/payout_background_deselected}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/mid_guideline_vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/mid_guideline_horizontal"
            tools:background="@drawable/payout_background_selected"
            android:onClick="@{() -> viewModel.jacksOrBetter.setCurrentCardDesign(Constants.CARD_DESIGN_CLASSIC_INDEX)}">

            <TextView
                android:id="@+id/option_1_title"
                style="@style/RegularText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_design_classic"
                android:layout_marginBottom="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"/>

            <ImageView
                android:id="@+id/option_1_card_1"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:src="@drawable/classic_example_1"
                android:adjustViewBounds="true"
                app:layout_constraintTop_toBottomOf="@id/option_1_title"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/option_1_card_2"/>

            <ImageView
                android:id="@+id/option_1_card_2"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:src="@drawable/classic_example_2"
                android:adjustViewBounds="true"
                app:layout_constraintTop_toBottomOf="@id/option_1_title"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/option_1_card_1"
                app:layout_constraintEnd_toStartOf="@id/option_1_card_3"/>

            <ImageView
                android:id="@+id/option_1_card_3"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:src="@drawable/classic_example_3"
                android:adjustViewBounds="true"
                app:layout_constraintTop_toBottomOf="@id/option_1_title"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/option_1_card_2"
                app:layout_constraintEnd_toStartOf="@id/option_1_card_4"/>

            <ImageView
                android:id="@+id/option_1_card_4"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:adjustViewBounds="true"
                android:src="@drawable/classic_example_4"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/option_1_card_3"
                app:layout_constraintTop_toBottomOf="@id/option_1_title" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/option_2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:padding="8dp"
            android:background="@{viewModel.jacksOrBetter.currentCardDesign == Constants.CARD_DESIGN_LARGE_INDEX ? @drawable/payout_background_selected : @drawable/payout_background_deselected}"
            app:layout_constraintStart_toStartOf="@id/mid_guideline_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/mid_guideline_horizontal"
            tools:background="@drawable/payout_background_deselected"
            android:onClick="@{() -> viewModel.jacksOrBetter.setCurrentCardDesign(Constants.CARD_DESIGN_LARGE_INDEX)}">

            <TextView
                android:id="@+id/option_2_title"
                style="@style/RegularText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_design_large"
                android:layout_marginBottom="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"/>

            <ImageView
                android:id="@+id/option_2_card_1"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:src="@drawable/large_example_1"
                android:adjustViewBounds="true"
                app:layout_constraintTop_toBottomOf="@id/option_2_title"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/option_2_card_2"/>

            <ImageView
                android:id="@+id/option_2_card_2"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:src="@drawable/large_example_2"
                android:adjustViewBounds="true"
                app:layout_constraintTop_toBottomOf="@id/option_2_title"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/option_2_card_1"
                app:layout_constraintEnd_toStartOf="@id/option_2_card_3"/>

            <ImageView
                android:id="@+id/option_2_card_3"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:src="@drawable/large_example_3"
                android:adjustViewBounds="true"
                app:layout_constraintTop_toBottomOf="@id/option_2_title"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/option_2_card_2"
                app:layout_constraintEnd_toStartOf="@id/option_2_card_4"/>

            <ImageView
                android:id="@+id/option_2_card_4"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:adjustViewBounds="true"
                android:src="@drawable/large_example_4"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/option_2_card_3"
                app:layout_constraintTop_toBottomOf="@id/option_2_title" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/button_menu_return_to_menu"
            style="@style/GameButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_return_to_menu"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:onClick="@{() -> fragment.navigateBack()}"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>